2000-11-08  Kevin Breit <battery841@mypad.com>

	* help/C/gnibbles.sgml: Made the manual Gnome 1.4/db2html2 ready.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/topic.dat: Fixed

2000-08-12  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/Makefile.am: Fixed stylesheet-images/ stuff

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* Makefile.am: Added the "help" SUBDIR
	* help/Makefile.am: Added
	* help/C/Makefile.am: Added
	* help/C/topic.dat: Added
	* help/C/images/*.png: Moved into help/C/
          - geez, we really need to standardize where these 
            things belong - every package does it differently :(

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* help/: Created 
	* help/C/: Created
	* help/C/gnibbles-manual.sgml: Added Kevin Breit's doc
	* help/C/images/: Created
	* help/C/images/*.png: Added Kevin's screenshots

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* docs/: removed - I should have put all this in help/

2000-08-03  Dan Mueth <d-mueth@uchicago.edu>

	* docs/: Created 
	* docs/C/: Created
	* docs/C/gnibbles-manual.sgml: Added Kevin Breit's doc
	* docs/C/images/: Created
	* docs/C/images/*.png: Added Kevin's screenshots

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnibbles.desktop: Added Swedish translation.

2000-05-06  Karl Eichwalder  <ke@suse.de>

	* gnibbles.soundlist: Add de.

2000-04-26  Ian Peters  <itp@gnu.org>

	* main.c (main): load_properties before setup_window, else we segfault.
	  How did this ever work?

2000-04-26  Ian Peters  <itp@gnu.org>

	* merged/modified patch from Sean Atkinson to allow configurable board
	  size (yay now all the laptop users can quit complaining)

2000-03-10 Elliot Lee <sopwith@redhat.com>
	* boni.c: Fix warning.
	* gnibbles.h: Increase GAMEDELAY to a level where newbie mode is
	actually playable.

1999-08-14  Matthias Warkus  <mawa@iname.com>

	* gnibbles.desktop: Use gnome-nibbles.png about which humanity
	seems to have forgot.

1999-07-17  Ian Peters  <itp@gnu.org>
