@@ -1,5 +1,10 @@
 2000-11-08  Kevin Breit <battery841@mypad.com>
 
+	* help/C/gnibbles.sgml: Started conversion from <itemizedlist> to
+          <variablelist> and a few clarity changes.
+
+2000-11-08  Kevin Breit <battery841@mypad.com>
+
 	* help/C/gnibbles.sgml: Made the manual Gnome 1.4/db2html2 ready.
 
 2000-10-19  Dan Mueth <d-mueth@uchicago.edu>
